# test_project

./: README.md  docker-compose.yml
api/: main.py  members.py  package-lock.json  package.json  pyproject.toml  report.py  serverless.yml
web/: Dockerfile  package-lock.json  package.json  serverless.yml  vue.config.js
