[tool.poetry]
name = "foo"
version = "0.1.0"
description = ""
authors = ["sonph"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.64.0"
mangum = "^0.11.0"

[tool.poetry.dev-dependencies]
uvicorn = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
